# Dynamicfuion_python

./: .gitignore  .gitmodules  .idea.bak.7z  CMakeLists.txt  README.md  basic_pipeline.py  basic_pipeline_transform_debug.py  create_graph_data.py  evaluate.py  example_viz.py  generate.py  generate_graph.py  options.py  pyproject.toml  requirements.txt  run_evaluate.sh  run_example_test_coverage.sh  run_frameviewer.py  run_fusion.py  run_generate.sh  run_generate_and_evaluate.sh  run_sod.py  run_train.sh  run_visualizer.py  train.py
cpp/: CMakeLists.txt  make_install_pip_package.cmake  version.txt
cpp/alignment/: DeformableMeshRenderToImageFitter.cpp  DeformableMeshRenderToRgbdImageFitter.h  DeformableMeshToImageFitter.cpp  DeformableMeshToImageFitter.h  FlatTriangleFitter.cpp  FlatTriangleFitter.h  IterationMode.h  NdcTriangleFitter.cpp  NdcTriangleFitter.h
cpp/core/: CUDAUtils.h  DeviceSelection.h  Dispatch.h  ExclusiveParallelScan.cpp  GetDType.cpp  GetDType.h  KdTree.cpp  KdTree.h  LinearIndex.cpp  ParallelFor.h  PlatformIndependence.h  PlatformIndependentAlgorithm.h  PlatformIndependentArray.h  PlatformIndependentAtomics.h  PlatformIndependentQualifiers.h  PlatformIndependentTuple.h  PreprocessorStrings.h  SetCompareTensors.cpp  SetCompareTensors.h  TensorManipulationRoutines.cpp  TensorManipulationRoutines.h  TensorRepresentationConversion.cpp  TensorRepresentationConversion.h
cpp/cpu/: graph_proc.cpp
cpp/debugging/: debugging.hpp
cpp/geometry/: AnchorComputationMethod.h  Comparison.h  Downsample3dPoints.h  GraphWarpField.cpp  GraphWarpField.h  HierarchicalGraphWarpField.cpp  HierarchicalGraphWarpField.h  NonRigidSurfaceVoxelBlockGrid.cpp  NonRigidSurfaceVoxelBlockGrid.h  PlanarGraphWarpField.cpp  PlanarGraphWarpField.h  RegularizationLayer.h  TransformationMode.h  Unproject3dPoints.cpp  VoxelBlockGrid.cpp  VoxelBlockGrid.h  WarpAnchorWeightComputationMethod.h  WarpField.cpp  WarpField.h  WarpNodeCoverageComputationMethod.h
cpp/io/: BlobIO.cpp  DeviceIO.h  DtypeIO.cpp  FileStreamSelector.h  TensorIO.h
cpp/pybind/: core.cpp  core.h  enum_export.h  nnrt_pybind.cpp  nnrt_pybind.h
cpp/rendering/: DeformableMeshRenderToImageFitter.cpp  DeformableMeshRenderToRgbdImageFitter.h  EdgeShader.cpp  EdgeShader.h  FlatEdgeShader.cpp  FlatEdgeShader.h  RasterizeMesh.cpp  RasterizeMesh.h  RasterizeNdcTriangles.cpp  RasterizeNdcTriangles.h  VertexColorShader.cpp  VertexColorShader.h
cpp/string/: join_string_separator.cpp  split_string.cpp  split_string.h
cpp/tests/: CMakeLists.txt  memory_manager_stateless.h  test_anchor_computation.cpp  test_array_comparisons.cpp  test_block_cholesky.cpp  test_block_sparse_arrowhead_solver.cpp  test_deformable_mesh_fitter.cpp  test_deformable_mesh_fitter_advanced.cpp  test_deformable_mesh_fitter_basic.cpp  test_deformable_mesh_fitter_intermediate.cpp  test_deformable_mesh_fitter_one_node.cpp  test_deformable_mesh_fitter_two_nodes.cpp  test_downsampling.cpp  test_extract_face_vertices.cpp  test_flat_edge_shader.cpp  test_graph_proc.cpp  test_graph_warp_field.cpp  test_heap.cpp  test_index_conversions.cpp  test_interpolate_vertex_attributes.cpp  test_kdtree.cpp  test_linalg_basic_routines.cpp  test_linalg_block_routines.cpp  test_linalg_block_sparse_routines.cpp  test_linalg_cholesky.cpp  test_linalg_matmul_block_sparse.cpp  test_linalg_matmul_block_sparse_row_wise.cpp  test_linalg_routines.cpp  test_main.hpp  test_matmul3d.cpp  test_mesh_to_adjacency_array_conversion.cpp  test_mesh_warping.cpp  test_non_rigid_surface_voxel_block_grid.cpp  test_normals_operations.cpp  test_rasterize.cpp  test_rasterize_mesh.cpp  test_rodrigues.cpp  test_sampling.cpp  test_solve_cholesky_block_diagonal.cpp  test_sorting.cpp  (+6 more)
csrc/: CMakeLists.txt  main.cpp  make_install_pip_package.cmake  rendering.cpp  rendering.hpp  setup_pybind_cmake.py  setup_torch_extension.py
csrc/bench/: CMakeLists.txt  kdtree_benchmark.cpp
csrc/core/: DeviceHeap.h  DeviceHeapCPU.cpp  DeviceHeapCPU.h  DeviceHeapCUDA.cu  DeviceHeapCUDA.cuh  DeviceKdTree.h  DeviceSelection.h  DimensionCount.h  Heap.cpp  Heap.h  KdTree.cpp  KdTree.h  KdTreePointCloud.cpp  KdTreePointCloud.h  KeyValuePair.h  LinearIndex.cpp  LinearIndex.h  PlatformIndependence.h  PlatformIndependentAtomics.h  PlatformIndependentTuple.h  SetCompareTensors.h  TensorManipulationRoutines.cpp  TensorManipulationRoutines.h
csrc/cpu/: graph_proc.cpp  graph_proc.h  image_proc.cpp  image_proc.h
csrc/geometry/: AnchorComputationMethod.h  Comparison.cpp  Comparison.h  Downsample3dPoints.cpp  DownsamplePoints.cpp  DownsamplePoints.h  DownsamplePointsByRadius.cpp  DownsamplePointsByRadius.h  DualQuaternion.h  ExtendedTSDFVoxelGrid.cpp  ExtendedTSDFVoxelGrid.h  Graph.cpp  Graph.h  GraphWarpField.cpp  GraphWarpField.h  IndexedPointCloud.h  MeshOperations.cpp  MeshOperations.h  NonRigidSurfaceVoxelBlockGrid.cpp  NonRigidSurfaceVoxelBlockGrid.h  NormalsOperations.cpp  NormalsOperations.h  PointToPlaneDistance.cpp  PointToPlaneDistance.h  ProjectionOperations.cpp  ProjectionOperations.h  TransformationMode.h  TriangleMesh.cpp  TriangleMesh.h  Unproject3dPoints.cpp  Unproject3dPoints.h  VoxelBlockGrid.cpp  VoxelBlockGrid.h  WarpTriangleMesh.cpp  WarpTriangleMesh.h  WarpableTSDFVoxelGrid.cpp  WarpableTSDFVoxelGrid.h
csrc/io/: BlobIO.cpp  BlobIO.h  CompressibleIStream.cpp  CompressibleIStream.h  CompressibleOStream.cpp  CompressibleOStream.h  DeviceIO.cpp  DtypeIO.cpp  DtypeIO.h  SizeVectorIO.cpp  SizeVectorIO.h  TensorIO.cpp  TensorIO.h  VoxelBlockGridIO.cpp  VoxelBlockGridIO.h
csrc/pybind/: io.cpp  io.h  nnrt_pybind.cpp
csrc/rendering/: RasterizeMesh.cpp  RasterizeMesh.h
csrc/string/: join_string_separator.h
csrc/tests/: CMakeLists.txt  DownloadAndExtractFile.cmake  test_array_comparisons.cpp  test_compute_mesh_triangle_normals.cpp  test_downsampling.cpp  test_experiments.cpp  test_extract_face_vertices.cpp  test_graph_proc.cpp  test_graph_warp_field.cpp  test_heap.cpp  test_interpolate_face_attributes.cpp  test_kdtree.cpp  test_main.hpp  test_matmul3d.cpp  test_non_rigid_surface_voxel_block_grid.cpp  test_rasterize_mesh.cpp  (+4 more)
(+1126 files in other folders)
