[project]
name = "nnrt_fusion"
authors = [
    {name="Gregory Kramida"},
    {name="Pablo Palafox"},
    {name="Aljaz Bozic"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python= ">=3.8"
dynamic = ['version', 'description']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.setuptools]
packages = [
    "cli", "csrc", "data", "apps", "tsdf", "settings",
    "alignment", "telemetry", "rendering", "warp_field",
]