[project]
name = "nnrt_fusion"
authors = [
    {name="Gregory Kramida"},
    {name="Pablo Palafox"},
    {name="Aljaz Bozic"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python= ">=3.8"
dynamic = ['version', 'description']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=[]
